--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,3 +27,22 @@ jobs:
       - name: 🧪 Run unit tests
         run: |
           python -m unittest discover -s . -p "test_*.py"
+
+      - name: 🐳 Build Docker Image
+        run: docker build -t your-dockerhub-username/flask-dashboard-app:latest .
+
+      - name: 🔐 Log in to DockerHub
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+
+      - name: 🚀 Push Docker Image
+        run: docker push your-dockerhub-username/flask-dashboard-app:latest
+
+      - name: 🔬 System Test - App Response
+        run: |
+          docker run -d -p 5000:5000 --name flask-test your-dockerhub-username/flask-dashboard-app:latest
+          sleep 5  # Wait for container to boot up
+          curl --fail http://localhost:5000 || (echo "System test failed" && exit 1)
+          docker stop flask-test
