--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,9 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🧪 Run unit tests
+      - name: 🧪 Run unit tests (module-wise)
         run: |
-          python -m unittest discover -s . -p "test_*.py"
+          python -m unittest discover -s tests -p "test_*.py" -v
+
 
       - name: 🐳 Build Docker Image
         run: docker build -t sreegovinth/uni-dashboard:latest .
